add PrintGCDateStamps